--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
@@ -70,7 +70,9 @@
         z-index: 3;
         text-align: center;
         background: #ffffff;
-
+        height: 517px;
+        overflow: auto;
+        
         .widgets-header {
             height: 30px;
             line-height: 30px;
