fix(analytics): fix style
datamap style

#12461

--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -109,6 +109,10 @@
     .ant-tabs-content {
         height: calc(100% - 32px);
     }
+    .datamap-container{
+        height: 100%;
+        position: relative;
+    }
 
     .pane-wrapper {
         overflow: auto;
