--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
@@ -15,6 +15,7 @@
     }
 }
 
+
 .graph-editor {
 
     .graph-bg {
@@ -113,6 +114,26 @@
         font-size: 12px;
         color: #666666;
         letter-spacing: 0;
+    }
+}
+
+@media (max-height: 700px) {
+
+    .graph-editor {
+
+        .graph-widgets {
+            height: 400px;
+            overflow: auto;
+
+            .widgets-content {
+                padding-top: 10px;
+    
+                .widgets-items {
+                    height: 25px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
     }
 }
 
