fix(form style): fix input control min-height from 100% to auto

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
@@ -222,3 +222,7 @@
     background: rgba(255, 255, 255, 0.4);
     cursor: not-allowed;
 }
+
+.ant-input-affix-wrapper .ant-input {
+    min-height: auto;
+}
