--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -880,6 +880,7 @@
                     font-weight: bold;
                 }
                 &:nth-child(2) {
+                    white-space: nowrap;
                     width: 40%;
                     text-align: left;
                 }
