fix(rdos): fix graph of taskManage
#12696

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
@@ -270,3 +270,11 @@
         }
     }
 }
+.o-chart__placeholder--empty{
+    line-height: 350px;
+    margin: 20px;
+    text-align: center;
+    color: #959FB1;
+    font-size: 18px;
+    border: 1px solid #e5e3e3;
+}
