fix: fix rulemanage
fix rulemanage

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -351,7 +351,14 @@
     border: none;
     background: none;
 }
-
+// 部分脱敏表单
+// .partDataForm .ant-form-item {
+//     float: left;
+//     font-size: 12px;
+//     margin-bottom: 24px;
+//     color: rgba(0, 0, 0, 0.65);
+//     vertical-align: top;
+// }
 // DML DDL样式
 .content {
     overflow: hidden;
