fix: alter div zIndex property
fix #12901

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
@@ -136,6 +136,7 @@
     border-bottom: 5px solid transparent;
     cursor: row-resize;
     width: 100%;
+    z-index: 999;
 }
 
 .Resizer.horizontal:hover {
