--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -64,7 +64,7 @@
         width: 100%;
         margin-top: 2px;
         position: relative;
-
+        z-index: 999;
         .ant-tabs {
             position: absolute;
             width: 100%;
