feat(excel): add download

--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -206,6 +206,7 @@
     height: 40px;
     width: 100%;
     padding-top: 5px;
+    padding-left: 8px;
 }
 .c-ide-result__tools__pagination{
     float: right;
