feat(table scroll): make table scroll
#13005

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -250,6 +250,12 @@
         tr>th:first-child {
             padding-left: 20px;
         }
+        .ant-table-fixed-right{
+            tr>td:first-child,
+            tr>th:first-child {
+            padding-left: 8px;
+            }
+        }
     }
 }
 
