--- a/engine-ui/packages/console-ui/src/webapps/main/components/nav/style.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/nav/style.scss
@@ -28,7 +28,7 @@ $activeColor: #262e36; // 主色
 
     .my-menu {
         line-height: 47px;
-        background: $bgColor2;
+        background: inherit;
         border-bottom: 0;
 
         .ant-menu-item {
@@ -88,7 +88,7 @@ $activeColor: #262e36; // 主色
     }
 
     .menu-right {
-        background: $bgColor2;
+        background: inherit;
         padding-right: 20px;
         width: 100%;
         height: 100%;
