--- a/engine-ui/packages/console-ui/src/webapps/main/styles/const.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/const.scss
@@ -1,6 +1,7 @@
 // ==== 颜色 ====
 $bgColor: #f2f7fa; // 背景色
 $bgColor2: #2E3943;
+$aliyunbgColor: #1B2126;
 $primaryColor: #2491F7; // 主色
 
 // ==== border  ====
