feat(notification): change style
#9091

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -417,3 +417,37 @@
         overflow-x: hidden;
     }
 }
+.dt-notification{
+    .ant-notification-notice-with-icon{
+        .ant-notification-notice-description,
+        .ant-notification-notice-message{
+            margin-left: 32px;
+        }
+        .ant-notification-notice-message{
+            color: #262626;
+            line-height: 24px;
+            font-weight: bold;
+            margin-bottom: 8px;
+        }
+        .ant-notification-notice-description{
+            color: #595959;
+            line-height: 20px;
+        }
+    }
+    .ant-notification-notice-close-x::after{
+        font-size: 14px;
+    }
+    .dt-notification__close-btn{
+        position: absolute;
+        color:#666666;
+        right:46px;
+        top: 14px;
+        line-height: 17px;
+        font-size: 12px;
+        font-weight: normal;
+        user-select: none;
+        &:hover{
+            color:rgb(39, 39, 39);
+        }
+    }
+}
