--- a/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
+++ b/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
@@ -8,3 +8,12 @@
         }
     }
 }
+.ht_clone_left.handsontable{
+    .htCore{
+        tbody{
+            tr th{
+                display: block;
+            }
+        }
+    }
+}
