fix(table): fix resize bug

--- a/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
+++ b/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
@@ -8,11 +8,12 @@
         }
     }
 }
-.ht_clone_left.handsontable{
+.ht_clone_left{
     .htCore{
         tbody{
             tr th{
                 display: block;
+                height: 21px;
             }
         }
     }
