fix(datamap): style optimization
style optimization

fix #13238

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -377,3 +377,12 @@
     display: block;
     margin: 12px 10px 0 0;
 }
+.addDesAlert.ant-alert-info .ant-alert-icon {
+    color: #999999;
+}
+.m-table-desen .ant-table-thead > tr > th.ant-table-selection-column, .ant-table-tbody > tr > td.ant-table-selection-column {
+    text-align: center;
+    padding-right: 0;
+    min-width: 40px;
+    width: 40px;
+}
