feat(api): fix style
#13562

--- a/engine-ui/packages/console-ui/src/webapps/dataApi/styles/views/approval.scss
+++ b/engine-ui/packages/console-ui/src/webapps/dataApi/styles/views/approval.scss
@@ -16,6 +16,14 @@
     transform: translateY(-50%);
     
 }
+.m-table {
+    .ant-table-tbody,
+    .ant-table-thead{
+        .text-padding {
+            padding-left: 20px;
+        }
+    }
+}
 .state-pass{
     position: relative;
 }
