fix(analytics): set default style of table
#11169

--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/main.scss
@@ -6,7 +6,9 @@
 @import './views/layout.scss';
 @import './views/workbench.scss';
 
-
+table{
+    font-size: 12px;
+}
 * {
     &::-webkit-scrollbar-track {
         border: 1px solid #e9e9e9;
