refactor: rename lowVersion and change css name;

--- a/engine-ui/packages/console-ui/src/widgets/chromeDownload/style.scss
+++ b/engine-ui/packages/console-ui/src/widgets/chromeDownload/style.scss
@@ -1,15 +1,15 @@
-.lowVersion {
+.chrome-download {
     background: #f2f7fa;
     margin-top: 50px;
     text-align: center;
     overflow-y: auto;
-    .pic_update {
+    .pic-update {
         width: 182px;
         margin: 148px 0 17.5px 0;
     }
     .divide {
         margin: 80.5px 0 60px 0;
-        .dividerText {
+        .divider-text {
             margin: 0 20px;
             font-size: 14px;
             color: #666666;
@@ -19,7 +19,7 @@
         width: 160px;
         margin: 0 auto;
         cursor: pointer;
-        .chromeVersion {
+        .chrome-version {
             margin-top: 16.5px;
             font-size: 14px;
             color: #666666;
