fix(rdos task): rollback stable
rollback stable

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -211,7 +211,7 @@
         }
         .s-carbonsql {
             .ant-tree-icon__docu {
-                background-image: url(/public/rdos/img/workflow.svg) // carbonsql图标暂缺
+                background-image: url(/public/rdos/img/carbonsql.svg)
             }
         }
         .s-table {
