feat(stream): add source msg
#12748

--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
@@ -417,8 +417,13 @@
         left: 0px;
         right: 0px;
         border-bottom: 1px solid #ddd;
-        padding: 10px 20px 10px 20px;
+        padding: 0px 20px;
+        height: 48px;
         z-index:1;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        overflow: hidden;
     }
     .graph-content-box{
         position: absolute;
