feat(console): add the interface about kill tasks in batches

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/queueManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/queueManage.scss
@@ -55,7 +55,7 @@
         .select-all {
             padding: 0 16px 0 30px;
             .ant-checkbox {
-                padding-right: 16px;
+                margin-right: 16px;
             }
         }
         .ant-btn {
