fix(rdos): add the alarm tips

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -198,6 +198,9 @@ body:-webkit-full-screen {
 .big-tooltip .ant-tooltip-inner{
     max-width: 350px;
 }
+.extremely-big-tooltip .ant-tooltip-inner{
+    max-width: 550px;
+}
 
 .split-text{
     float: left;
