--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
@@ -734,4 +734,10 @@ $fontColor1: #2491F7;
     .ant-tabs-bar{
         border-color: $borderColor1;
     }
+    .c-welcome__menu__title {
+        color: #ddd;
+    }
+    .c-task__main-box {
+        background: $color1;
+    }
 }
